--- a/index.css
+++ b/index.css
@@ -182,12 +182,24 @@ nav .nav-list .nav-items a.active{
     background-color: #f9f9f9;
     transition-duration: 200ms;
     letter-spacing: 1px;
-    padding: 5px 25px;
+    padding: 0;
     margin: 0;
+    position: relative;
+    display: flex;
+    max-width: 115px;
+    height: 25px;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
 }
 .info-container .readmore-button a{
     color: var(--dark-color);
     font-size: 14px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .info-container .readmore-button:hover a{
     color: var(--light-color);
@@ -342,6 +354,9 @@ footer small p a{
     .main-section .sections img{
         width: 100%;
     }
+    .info-container .title{
+        font-size: 30px;
+    }
     .contacts{
         height: 100%;
         box-sizing: border-box;
@@ -351,6 +366,10 @@ footer small p a{
     .contacts form{
         flex-direction: column;
         justify-content: center;
+    }
+    .pagination{
+        font-size: small;
+        gap: 1rem;
     }
     footer{
         padding: 0 !important;
